fix mobile overflow scroll problem

--- a/webapp/src/styles/Sidebar.module.css
+++ b/webapp/src/styles/Sidebar.module.css
@@ -3,17 +3,17 @@
   position: fixed;
   background-color: white;
   border-right: 0.0625rem solid #ececf1;
-  margin-top: 5rem;
+  margin-top: 1rem;
   width: 13rem;
   height: 100vh;
   z-index: var(--sidebar-z-index);
+  overflow-y: scroll;
 
   transform: translateX(-100%);
   transition: transform 0.3s ease-out;
 }
 
 .container.show {
-  /* 當顯示 Sidebar 時，移動元素到視窗內 */
   transform: translateX(0);
 }
 
