--- a/webapp/src/styles/globals.css
+++ b/webapp/src/styles/globals.css
@@ -34,7 +34,6 @@ body,
   padding: 0;
   margin: 0;
   min-height: 100vh;
-  overflow-x: hidden;
   background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb)))
     rgb(var(--background-start-rgb));
 }
